<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.manoelcampos</groupId>
    <artifactId>estatisticas-estudantes-funcional</artifactId>
    <description>
        Projeto mostrando como usar programação funcional para
        calcular estatísticas a partir de um conjunto de dados de alunos.
        Demonstra como podemos escrever menos código, resolver problemas
        de forma mais simples e ainda reduzir a probabilidade de bugs
        usando programação funcional.
    </description>
    <version>1.0.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
